# Data_extractor_from_documents

./: .gitattributes  .gitignore  pyproject.toml
data/: ESTRATEGIA NACIONAL ANTE EL CAMBIO CLIMÁTICO-E1.docx  ESTRATEGIA NACIONAL ANTE EL CAMBIO CLIMÁTICO-E2.docx  ESTRATEGIA NACIONAL ANTE EL CAMBIO CLIMÁTICO-E3.docx  ESTRATEGIA NACIONAL ANTE EL CAMBIO CLIMÁTICO-E4.docx  PN CONTRA LAVADO DE ACTIVOS-E1.docx  PN CONTRA LAVADO DE ACTIVOS-E2.docx  PN DE CIENCIA, TEC. E INN-E3.docx  PN DE CULTURA-E3.docx  PN DE DEFENSA DEL CONSUMIDOR-E1.docx  PN DE DEFENSA DEL CONSUMIDOR-E2.docx  PN DE DEFENSA DEL CONSUMIDOR-E3.docx  PN DE DERECHOS HUMANOS-E1.docx  PN DE DERECHOS HUMANOS-E2.docx  PN DE DESARROLLO E ICLUSIÓN SOCIAL-E1.docx  PN DE DESARROLLO E ICLUSIÓN SOCIAL-E2.docx  PN DE DESARROLLO E ICLUSIÓN SOCIAL-E3.docx  PN DE DESARROLLO E ICLUSIÓN SOCIAL-FINAL.docx  PN DE EDUCACIÓN INTERCULTURAL Y BILINGUE-E1.docx  PN DE EDUCACIÓN INTERCULTURAL Y BILINGUE-E3.docx  PN DE GLACIARES Y ECOSISTEMAS DE MONTAÑA-E1.docx  PN DE INTEGRIDAD Y LUCHA CONTRA LA CORRUPCIÓN-E2.docx  PN DE INTEGRIDAD Y LUCHA CONTRA LA CORRUPCIÓN-E3.docx  PN DE ORDENAMIENTO TERRITORIAL-E1.docx  PN DE ORDENAMIENTO TERRITORIAL-E2.docx  PN DE ORDENAMIENTO TERRITORIAL-E3.docx  PN DE ORDENAMIENTO TERRITORIAL-E4.docx  PN DE PUEBLOS INDÍGENAS-E1.docx  PN DE PUEBLOS INDÍGENAS-E2.docx  PN DE PUEBLOS INDÍGENAS-E3.docx  PN DE SEGURIDAD VIAL-E2.docx  PN DE SEGURIDAD VIAL-E4.docx  PN DE SEGURIDAD VIAL-FINAL.docx  PN DE TRANSFORMACIÓN DIGITAL-E2.docx  PN DE TRANSFORMACIÓN DIGITAL-E3.docx  PN DE TRANSFORMACIÓN DIGITAL-FINAL.docx  (+15 more)
(+2 files in other folders)
