[tool.poetry]
name = "data-extractor-from-documents"
version = "0.1.0"
description = ""
authors = ["Eber <laurente.eber@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
farm-haystack = {extras = ["inference"], version = "^1.23.0"}
pandas = "^2.1.4"
numpy = "^1.26.3"
pypdf2 = "^3.0.1"
python-dotenv = "^1.0.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
python-docx = "^1.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
